# SXEval

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test-multi-platform.yml
examples/: CMakeLists.txt
examples/basic/: main.cpp
examples/custom-functions/: MyFunc.hpp  main.cpp
examples/custom-operations/: main.cpp  myOpe.hpp
examples/encapsulated-variables/: main.cpp  myVar.hpp
include/sxeval/: AInstruction.hpp  AOperand.hpp  AOperation.hpp  EncapsulatedVariable.hpp  SXEval.hpp  Value.hpp  Variable.hpp  utils.hpp
include/sxeval/operations/: AbsoluteValue.hpp  Addition.hpp  ArcCosh.hpp  ArcCosine.hpp  ArcSine.hpp  ArcSinh.hpp  ArcTangent.hpp  ArcTangent2.hpp  ArcTanh.hpp  Average.hpp  Ceiling.hpp  Clamp.hpp  Cosh.hpp  Cosine.hpp  DegreesToGradians.hpp  DegreesToRadians.hpp  Division.hpp  Equal.hpp  Expm1.hpp  Exponentiation.hpp  Floor.hpp  GradiansToDegrees.hpp  Greater.hpp  GreaterOrEqual.hpp  Hypotenuse.hpp  Less.hpp  LessOrEqual.hpp  Logarithm.hpp  Logarithm10.hpp  Logarithm1p.hpp  Logarithm2.hpp  LogarithmB.hpp  LogicalAnd.hpp  LogicalNand.hpp  LogicalNor.hpp  LogicalNot.hpp  LogicalOr.hpp  LogicalXnor.hpp  LogicalXor.hpp  Maximum.hpp  (+16 more)
scripts/: generate-doc.py  generate-operations.py  generate-tests.py  mathematical_tests.xml  operations.xml
tests/: CMakeLists.txt  TestOperations.cpp
uml/: class-diagram.plantuml
